<resources>
    <string name="app_name">Pranky</string>
    <string name="version">Version - 1.3.1</string>
    <string name="title_activity_main">Main</string>
    <string name="copyright">Copyrights
        <a href="http://www.four-nodes.com">Four Nodes</a>\n
        All rights
    </string>
    <string name="sounds_info">Royalty Free Sounds from
        <a href="http://www.soundbible.com">SoundBible</a>
    </string>
    <string name="icons_info"><a href="http://www.flaticon.com/">Freepik</a>\n
        Licensed under
        <a href="http://www.creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>
    </string>
    <string name="music_info">Royalty Free Music from
        <a href="http://www.bensound.com/">Bensound</a>
    </string>
    <string name="add_custom_sound">"Add Custom Sound  "</string>
    <string name="pick_an_icon">"Pick an icon"</string>
    <string name="select_a_sound">"SELECT A SOUND  "</string>
    <string name="day">"DAY"</string>
    <string name="hh">"HH"</string>
    <string name="mm">"MM"</string>
    <string name="pranks_left">"Pranks Left"</string>
    <string name="go_premium_to_get_more">"Go premium to get more"</string>
    <string name="no_ads_premium">"- No Ads"</string>
    <string name="stealth_mode_premium">"- Stealth Mode"</string>
    <string name="unlimited_pranks_premium">"- Unlimited Pranks"</string>
    <string name="friends_id">"F R I E N D \' S   I D  "</string>
    <string name="music">"Music"</string>
    <string name="stealth_mode">"Stealth Mode"</string>
    <string name="remote_prank">"Remote Prank"</string>
    <string name="ss">"SS"</string>
    <string name="sign_up_spaced">"S I G N   U P"</string>
    <string name="sign_up_notice">"If you don\'t want to sign up at the moment, you can always skip it."</string>
    <string name="name">"Name"</string>
    <string name="country">"Country"</string>
    <string name="number">"Number"</string>
    <string name="select_a_friend">"Select a friend  "</string>
    <string name="app_name_spaced">"P r a n k y"</string>
    <string name="sounds_spaced">"S o u n d s"</string>
    <string name="background_music_spaced">"B a c k g r o u n d   M u s i c"</string>
    <string name="icon_set_spaced">"I c o n   S e t"</string>
    <string name="keep_pranking_spaced">"K e e p   P r a n k i n g !"</string>
    <string name="thank_you_spaced">"T h a n k   Y o u"</string>
    <string name="pranking_spaced">"P r a n k i n g"</string>
    <string name="pranking_dots_spaced">"P r a n k i n g ..."</string>
    <string name="my_id">"My ID  "</string>
    <string name="toast_friend_unavailable">"Your  friend  is  unavailable "</string>
    <string name="toast_prank_success">"Your  friend  has  been  pranked "</string>
    <string name="toast_network_unavailable">"Network  or server unavailable "</string>
    <string name="notification_logged_out">"You  have  been  logged  out"</string>
    <string name="toast_select_sound">"Select  a  sound  first"</string>
    <string name="toast_friend_id_timeout">"Please wait 60 seconds before trying again"</string>
    <string name="toast_select_non_custom_sound">"A  non-custom  sound  should  be  selected  "</string>
    <string name="tut_set_playback_time_title">"Set playback time"</string>
    <string name="tut_set_playback_time_desc">"Tap on the timer icon to play the sound after a specified interval"</string>
    <string name="loading_ad_spaced">"L o a d i n g   A d ..."</string>
    <string name="toast_time_passed">"Selected time has passed."</string>
    <string name="tut_select_sound_title">"Select a sound  "</string>
    <string name="tut_select_sound_desc">"Tap on the icon to pick a sound from your phone"</string>
    <string name="tut_pick_icon_title">"Pick an icon"</string>
    <string name="tut_pick_icon_desc">"Choose an icon for your sound  "</string>
    <string name="toast_invalid_file">"Sound should be either mp3, wav, or ogg."</string>
    <string name="toast_sound_duration">"Sound should be less than 60 seconds."</string>
    <string name="tut_save_sound_title">"Save your sound  "</string>
    <string name="tut_save_sound_desc">"Tap on save to add your sound to the list"</string>
    <string name="toast_invalid_id">"Invalid ID  "</string>
    <string name="tut_prank_friend_title">"Prank a friend  "</string>
    <string name="tut_prank_friend_desc">"Tap the button to save the ID  "</string>
    <string name="paring_spaced">"P a i r i n g ..."</string>
    <string name="toast_enter_friend_id">"Enter friends ID  "</string>
    <string name="tut_prank_friend_desc2">"Enter your \'Friend\'s ID\' found in the settings popup."</string>
    <string name="tut_time_attack_title">"Time Attack"</string>
    <string name="tut_time_attack_desc">"Tap on the set button to set the timer and wait for your sound to play"</string>
    <string name="toast_min_time_limit">"Minimum  time  is  5  seconds"</string>
    <string name="tut_time_attack_desc2">"Select the timer to 5 seconds by moving the wheel"</string>
    <string name="please_wait_spaced">"P l e a s e   W a i t ..."</string>
    <string name="syncing_contacts_spaced">"S y n c i n g   C o n t a c t s ..."</string>
    <string name="toast_invalid_number">"Invalid  number"</string>
    <string name="refreshing_spaced">"R e f r e s h i n g ..."</string>
    <string name="fetching_id_spaced">"F e t c h i n g   I D ..."</string>
    <string name="toast_contact_added">" contacts added  "</string>
    <string name="toast_contact_removed">" contacts removed  "</string>
    <string name="toast_no_change">"No change"</string>
    <string name="select_number">"Select  a  number"</string>
    <string name="toast_volume_low">"Volume too low !"</string>
    <string name="tut_add_sound_title">"Add more sounds"</string>
    <string name="tut_add_sound_desc">"Tap on the \'+\' to add a custom sound of your choice"</string>
    <string name="tut_select_sound">"Select a sound  "</string>
    <string name="tut_select_sound_desc2">"Tap on the icon to preview the sound and select it"</string>
    <string name="notification_pranked_by">"You have been pranked by "</string>
    <string name="notification_pranked">"You have been pranked  "</string>
    <string name="notification_pranked_title">"Pranked!"</string>
    <string name="notification_prank_back">"Prank Back"</string>
</resources>