<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <include layout="@layout/layout_popup_long" />


    <include layout="@layout/layout_button_set" />


    <LinearLayout
        android:id="@+id/lytWheels"
        android:layout_width="wrap_content"
        android:layout_above="@+id/lytDuration"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <com.fournodes.ud.pranky.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hh"
                android:textAllCaps="true"
                android:textColor="#bf071a"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout

                android:layout_width="@dimen/timer_wheel__width"
                android:layout_height="@dimen/timer_wheel_frame_height"
                android:background="@drawable/wheel_1">

                <antistatic.spinnerwheel.WheelVerticalView
                    android:layout_marginTop="@dimen/wheel_frame_top_margin"
                    android:id="@+id/timerhour"
                    android:layout_width="@dimen/timer_wheel__width"
                    android:layout_height="@dimen/timer_wheel_height"
                    app:isAllVisible="false"

                    />
            </FrameLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <com.fournodes.ud.pranky.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mm"
                android:textAllCaps="true"
                android:textColor="#bf071a"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center" />

            <FrameLayout

                android:layout_width="@dimen/timer_wheel__width"
                android:layout_height="@dimen/timer_wheel_frame_height"
                android:background="@drawable/wheel_2">

                <antistatic.spinnerwheel.WheelVerticalView
                    android:layout_marginTop="@dimen/wheel_frame_top_margin"

                    android:id="@+id/timerminute"
                    android:layout_width="@dimen/timer_wheel__width"
                    android:layout_height="@dimen/timer_wheel_height"
                    app:isAllVisible="false"

                    />
            </FrameLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <com.fournodes.ud.pranky.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ss"
                android:textAllCaps="true"
                android:textColor="#bf071a"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout

                android:layout_width="@dimen/timer_wheel__width"
                android:layout_height="@dimen/timer_wheel_frame_height"
                android:background="@drawable/wheel_3">

                <antistatic.spinnerwheel.WheelVerticalView
                    android:layout_marginTop="@dimen/wheel_frame_top_margin"

                    android:id="@+id/timersec"
                                        android:layout_width="@dimen/timer_wheel__width"
                    android:layout_height="@dimen/timer_wheel_height"
                    app:isAllVisible="false"

                    />
            </FrameLayout>

        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/layout_duration_wheel" />


</RelativeLayout>