<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <include layout="@layout/layout_popup_long" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/btnClose"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/settings_linearlayout_height"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <com.fournodes.ud.pranky.custom.CustomTextView
                android:id="@+id/txtBGMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/music_text_margin_right"
                android:padding="8dp"
                android:text="@string/music"
                android:textAllCaps="true"
                android:textColor="#bf071a"
                android:textIsSelectable="false"
                android:textSize="@dimen/settings_font_small"
                android:textStyle="bold"

                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/btnMusicToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/music_switch_margin_left"
                android:paddingBottom="0dp"
                android:textOff="OFF"
                android:textOn="ON"
                app:showText="false"
                android:thumb="@drawable/tgl_music"
                android:thumbTextPadding="20dp"
                app:track="@drawable/toggle_body"


                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/stealthmode"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/settings_linearlayout_height"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <com.fournodes.ud.pranky.custom.CustomTextView
                android:id="@+id/txtStealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/prank_text_margin_right"
                android:padding="8dp"
                android:text="@string/stealth_mode"
                android:textAllCaps="true"
                android:textColor="#bf071a"
                android:textIsSelectable="false"
                android:textSize="@dimen/settings_font_small"
                android:textStyle="bold"

                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/btnStealthToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/prank_switch_margin_left"
                android:paddingBottom="0dp"
                android:textOff="OFF"
                android:textOn="ON"
                app:showText="false"
                android:thumb="@drawable/tgl_stealth"
                android:thumbTextPadding="20dp"
                app:track="@drawable/toggle_body"


                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/myID"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/settings_linearlayout_height"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <com.fournodes.ud.pranky.custom.CustomTextView

                android:id="@+id/txtRemotePrank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/prank_text_margin_right"
                android:padding="8dp"
                android:text="@string/remote_prank"
                android:textAllCaps="true"
                android:textColor="#bf071a"
                android:textIsSelectable="false"
                android:textSize="@dimen/settings_font_small"
                android:textStyle="bold"


                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/swtRemotePrank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/prank_switch_margin_left"
                android:paddingBottom="0dp"
                android:textOff="OFF"
                android:textOn="ON"
                app:showText="false"
                app:track="@drawable/toggle_body"
                android:thumb="@drawable/tgl_remote_prank"
                android:thumbTextPadding="20dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRemoteID"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/settings_linearlayout_height"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:gravity="center"
            android:layout_gravity="center">

            <com.fournodes.ud.pranky.custom.CustomTextView
                android:id="@+id/lblmyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/id_text_margin_right"
                android:padding="8dp"
                android:text="@string/my_id"
                android:textAllCaps="true"
                android:textColor="#bf071a"
                android:textIsSelectable="false"
                android:textSize="@dimen/settings_font_small"
                android:textStyle="bold" />

            <com.fournodes.ud.pranky.custom.CustomTextView
                android:id="@+id/txtmyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/id_value_margin_left"
                android:layout_marginRight="05dp"
                android:padding="5dp"
                android:text=""
                android:textColor="#000"
                android:textSize="@dimen/settings_font_small"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>